[gd_scene load_steps=7 format=2]

[ext_resource path="res://Imatges/Pastor/Pastor2.png" type="Texture" id=1]
[ext_resource path="res://Imatges/Pastor/Pastor1.png" type="Texture" id=2]
[ext_resource path="res://Escenes/Comerciant.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 61.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Talk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 188.0

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="Label" type="Label" parent="."]
margin_left = -146.0
margin_top = -122.0
margin_right = -106.0
margin_bottom = -96.0

[node name="Interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 3 )

[node name="Yes" type="Button" parent="."]
visible = false
margin_left = -112.0
margin_top = 78.0
margin_right = 191.0
margin_bottom = 110.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Let's see what do you have"

[node name="No" type="Button" parent="."]
visible = false
margin_left = -48.0
margin_top = 108.0
margin_right = 95.0
margin_bottom = 140.0
rect_scale = Vector2( 0.75, 0.75 )
text = "No thanks..."

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Interact" to="." method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_Interact_body_exited"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
